# android-studio4.0-cmake-use

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  test.cpp
app/src/main/java/com/example/ndkdemo/: JniCall.kt  MainActivity.kt  Test.java
gradle/wrapper/: gradle-wrapper.properties
